# wamr-esp32-zephyr

samples/hello_world/src/: main.c
samples/simple/: CMakeLists.txt  flash.sh  iwasm  rebuild.sh  shared-lib  zephyr-env.sh
samples/simple/src/: ext_lib_export.c  ext_lib_export_dec.h  main.c  test_wasm.h
samples/simple/src/wasm-samples/hello-world/: build.sh  main.c  test.wasm  test.wasm.map  test.wast  test_wasm.h  timer.c
samples/simple/src/wasm-samples/hello-world-c/: build.sh  main.c  test.wasm  test.wasm.map  test.wast
samples/simple/src/wasm-samples/hello-world-go/: build.sh  main.go  test.wasm  test_wasm.h
samples/simple/src/wasm-samples/hello-world-rs/: Cargo.toml  build.sh  test.wasm  test_wasm.h
samples/simple/src/wasm-samples/hello-world-rs/src/: lib.rs
samples/simple/src/wasm-samples/hello-world-ts/: build.sh  index.ts  package-lock.json  package.json  test.wasm  test_wasm.h
samples/simple/src/wasm-samples/hello-world-ts/assembly/: index.ts
scripts/: requirements.txt
