[package]
name = "hello-world-rs"
version = "0.1.0"
authors = ["Amal Abeygunawardana <amalabey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.50"

[lib]
crate-type = ["cdylib", "rlib"]